<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">e-GDL</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="bache">Reportar Bache</string>
    <string name="ubicacion">Conocer mi Ubicación</string>
    <string name="comentario">Agregue un Comentario sobre el problema</string>
    <color name="blanco">#fff</color>
    <color name="gris">#dadada</color>
    <string name="foto">Tomar Fotografía</string>
    <string name="enviar">Enviar Reporte</string>
    <string name="luminaria">Reportar Luminaria</string>
    <string name="fuga">Reportar Fuga de Agua</string>
    <string name="arbol">Reportar Arbol</string>
    <string name="guardar">Guardar Reporte</string>
    <string name="reportar">Selecciona que deseas reportar</string>
     <string name="uploaded">Se ha subido correctament</string>
     <string name="guardados">Reportes guardados</string>
     
    <string name="misreportes">Reportes Guardados</string>

</resources>
