<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    android:background="#536b83"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/bache" 
	        android:textSize="24sp"
	        android:layout_marginTop="10dp"
	        android:textAllCaps="true"
	        android:textColor="@color/blanco"/>

	    <Button
	        android:id="@+id/button1"
	        android:layout_width="fill_parent"
	        android:layout_height="40dp"
	        android:background="@drawable/botones"
	        android:textColor="@drawable/btntxt"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:layout_marginTop="10dp"
	        android:text="@string/ubicacion"
	        android:textColorHint="@color/gris"
	        android:textColorLink="@color/blanco" />

	    <Button
	        android:id="@+id/fotoBoton"
	        android:layout_width="fill_parent"
	        android:layout_height="40dp"
	        android:background="@drawable/botones"
	        android:textColor="@drawable/btntxt"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:layout_marginTop="10dp"
	        android:text="@string/foto" />

	    <ImageView
	        android:id="@+id/imageView1"
	        android:layout_width="fill_parent"
	        android:contentDescription="@string/foto"
	        android:layout_height="100dp"
	        android:src="@drawable/ic_action_camara" />

	    <TextView
	        android:id="@+id/textView2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="@color/blanco"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
		        android:layout_marginTop="3dp"
		         android:gravity="center"
	        android:textSize="18sp"
	        android:text="@string/comentario"
	        android:textAppearance="?android:attr/textAppearanceLarge" />

	    <EditText
	        android:id="@+id/editText1"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:minHeight="90dp"
	        android:padding="10dp"
	        android:layout_marginTop="5dp"
	        android:background="@color/blanco"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:inputType="textMultiLine" android:focusable="true">

	    </EditText>

	    <Button
	        android:id="@+id/button3"
	        android:layout_width="fill_parent"
	        android:layout_height="40dp"
	        android:background="@drawable/botones"
	        android:textColor="@drawable/btntxt"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:layout_marginTop="10dp"
	        android:text="@string/enviar" />
	    
	    <Button
	        android:id="@+id/btn_guardar"
	        android:layout_width="fill_parent"
	        android:layout_height="40dp"
	        android:textAllCaps="true"
	        android:textColor="@color/blanco"
	        android:textStyle="bold"
	        android:background="@drawable/botonrosa"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:layout_marginTop="10dp"
	        android:text="@string/guardar" />

</LinearLayout>