<ScrollView
    android:id="@+id/scrollview"
     xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:background="#536b83"
    >

	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center_horizontal"
	    android:orientation="vertical" >
	
		    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="24sp"
	        android:layout_marginTop="10dp"
	        android:textAllCaps="true"
	        android:textColor="@color/blanco"/>
		    
		    <Button
		        android:id="@+id/ubicacion"
		        android:layout_width="fill_parent"
		        android:layout_height="40dp"
		        android:background="@drawable/botones"
		        android:textColor="@drawable/btntxt"
		        android:layout_marginLeft="10dp"
		        android:layout_marginRight="10dp"
		        android:layout_marginTop="10dp"
		        android:text="@string/ubicacion"
		        android:textColorHint="@color/gris"
		        android:textColorLink="@color/blanco" />
		    
		    
		    <fragment 
		        android:name="com.google.android.gms.maps.SupportMapFragment"
		        android:id="@+id/map"
		        android:layout_marginLeft="10dp"
		        android:layout_marginRight="10dp"
		        android:layout_marginTop="10dp"
		        android:layout_width="match_parent"
		        android:layout_height="300dp"
		        class="com.reporta.reportaegdl.WorkaroundMapFragment"
		        
		        />
		   
	

		  
		    
	
		    <Button
		        android:id="@+id/fotoBoton"
		        android:layout_width="fill_parent"
		        android:layout_height="40dp"
		        android:background="@drawable/botones"
		        android:textColor="@drawable/btntxt"
		        android:layout_marginLeft="10dp"
		        android:layout_marginRight="10dp"
		        android:layout_marginTop="10dp"
		        android:text="@string/foto" />
		    
		    <ImageView
		        android:id="@+id/ivImage"
		        android:layout_width="fill_parent"
		        android:contentDescription="@string/foto"
		        android:layout_marginTop="@dimen/mtop"
		        android:layout_height="100dp"
		        android:src="@drawable/ic_action_camara" />
	
	
		    <TextView
		       
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@color/blanco"
		        android:layout_marginLeft="10dp"
		        android:layout_marginRight="10dp"
		        android:layout_marginTop="3dp"
		         android:gravity="center"
		        android:textSize="18sp"
		        android:text="@string/comentario"
		        android:textAppearance="?android:attr/textAppearanceLarge" />
	
		    <EditText
		        android:id="@+id/comentario"
		        android:layout_marginLeft="10dp"
		        android:layout_marginRight="10dp"
		        android:padding="2dp"
		        android:background="@color/blanco"
		        android:minHeight="90dp"
		        android:layout_marginTop="3dp"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:inputType="textMultiLine" >
	
		    </EditText>
		    
			<TextView
	      	  android:id="@+id/exp_hidden_id"
	      	  android:layout_width="fill_parent"
	          android:layout_height="wrap_content"
	          android:visibility="gone"/>
	
			<TextView
	      	  android:id="@+id/lat_hidden"
	      	  android:layout_width="fill_parent"
	          android:layout_height="wrap_content"
	          android:visibility="gone"
	         />

	
		    <Button
		        android:id="@+id/enviarArbol"
		        android:layout_width="fill_parent"
		        android:layout_height="40dp"
		        android:background="@drawable/botones"
		        android:textColor="@drawable/btntxt"
		        android:layout_marginLeft="10dp"
		        android:layout_marginRight="10dp"
		        android:layout_marginTop="10dp"
		        android:textAllCaps="true"
		        android:text="@string/enviar" />
		    
		    <TextView
		         android:layout_width="fill_parent"
		         android:layout_height="wrap_content"
		         android:text=""
		         android:id="@+id/messageText"
		         android:textColor="#000000"
		         android:textStyle="bold"
		     />
		    
		    <Button
		        android:id="@+id/btn_guardar"
		        android:layout_width="fill_parent"
		        android:layout_height="40dp"
		        android:textAllCaps="true"
		        android:textColor="@color/blanco"
		        android:textStyle="bold"
		        android:background="@drawable/botonrosa"
		        android:layout_marginLeft="10dp"
		        android:layout_marginRight="10dp"
		        android:layout_marginBottom="10dp"
		        android:layout_marginTop="10dp"
		        android:text="@string/guardar" />
	
	</LinearLayout>
</ScrollView>